2009-09-13  Anthony Ricaud  <rik@webkit.org>

        Reviewed by Oliver Hunt.

        Web Inspector: Add "New Style Rule" to the localizedStrings
        https://bugs.webkit.org/show_bug.cgi?id=29237

        * English.lproj/localizedStrings.js:

2009-09-13  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        [wx] Implement filesystem functions.

        https://bugs.webkit.org/show_bug.cgi?id=29196

        * platform/wx/FileSystemWx.cpp:
        (WebCore::fileExists):
        (WebCore::deleteFile):
        (WebCore::deleteEmptyDirectory):
        (WebCore::getFileSize):
        (WebCore::getFileModificationTime):
        (WebCore::makeAllDirectories):
        (WebCore::pathByAppendingComponent):
        (WebCore::homeDirectoryPath):
        (WebCore::directoryName):

2009-09-12  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fixes for wx 2.9.

        * platform/wx/ScrollbarThemeWx.cpp:
        * platform/wx/wxcode/gtk/scrollbar_render.cpp:
        (wxGetGdkWindowForDC):

2009-09-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        [ES5] Implement Object.keys
        https://bugs.webkit.org/show_bug.cgi?id=29170

        Switch from getPropertyNames to getOwnPropertyNames, and provide custom
        getPropertyNames to DOMWindow, DOMWindowShell and QuarantinedObjectWrapper
        in order to ensure correct semantics are maintained.

        Test: fast/js/Object-keys.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::getOwnPropertyNames):
        * bindings/js/JSDOMWindowShell.cpp:
        (WebCore::JSDOMWindowShell::getOwnPropertyNames):
        * bindings/js/JSDOMWindowShell.h:
        * bindings/js/JSHistoryCustom.cpp:
        (WebCore::JSHistory::getOwnPropertyNames):
        * bindings/js/JSLocationCustom.cpp:
        (WebCore::JSLocation::getOwnPropertyNames):
        * bindings/js/JSQuarantinedObjectWrapper.cpp: